--- a/fb_compte.ipynb
+++ b/fb_compte.ipynb
@@ -2,30 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 100,
    "id": "4abef97a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'schedule'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[100], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeys\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Keys\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01munidecode\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m unidecode\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mschedule\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'schedule'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import t\n",
     "from time import sleep\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
-    "from bs4 import BeautifulSoup as bs\n",
-    "import requests as req"
+    "from unidecode import unidecode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 95,
    "id": "294c03a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Takepages(compte,pwd,sujet):\n",
-    "    \n",
+    "    driver= webdriver.Chrome()\n",
     "    driver.get('https://www.facebook.com/')\n",
     "    driver.find_element(By.ID,'email').send_keys(compte)\n",
     "    driver.find_element(By.ID,'pass').send_keys(pwd)\n",
@@ -38,88 +50,48 @@
     "    pag=driver.find_element(By.CSS_SELECTOR,'.x1yztbdb.x1d52u69.xktsk01')\n",
     "    pag.click()\n",
     "    sleep(2)\n",
-    "    for i in range(3):\n",
+    "    for i in range(5):\n",
     "        driver.execute_script(f\"window.scrollTo(0, document.body.scrollHeight);\")\n",
-    "        sleep(2)\n",
+    "    sleep(5)\n",
     "    pages=driver.find_elements(By.CSS_SELECTOR,'.x1i10hfl.xjbqb8w.x6umtig.x1b1mbwd.xaqea5y.xav7gou.x9f619.x1ypdohk.xt0psk2.xe8uvvx.xdj266r.x11i5rnm.xat24cr.x1mh8g0r.xexx8yu.x4uap5.x18d9i69.xkhd6sd.x16tdsg8.x1hl2dhg.xggy1nq.x1a2a7pz.xt0b8zv.xzsf02u.x1s688f')\n",
+    "    sujet=unidecode(sujet).upper()\n",
     "    urls=[]\n",
-    "    noms=[]\n",
-    "#     for url in pages:\n",
-    "#         noms.append(url.text)\n",
-    "#         urls.append(url.get_attribute('href'))\n",
-    "    return pages"
+    "    for i in range(len(pages)):\n",
+    "        try:\n",
+    "            nom=unidecode(pages[i].text).upper()\n",
+    "            if nom==f'{sujet}':\n",
+    "                urls.append(pages[i].get_attribute('href'))\n",
+    "        except:\n",
+    "            continue\n",
+    "   \n",
+    "    comptes=[]\n",
+    "    amis=[]\n",
+    "    liens=[]\n",
+    "    for url in urls:\n",
+    "        try:\n",
+    "            driver.get(url)\n",
+    "            sleep(10)\n",
+    "            compte=driver.find_element(By.CLASS_NAME,'x193iq5w.xeuugli.x13faqbe.x1vvkbs.x1xmvt09.x1lliihq.x1s928wv.xhkezso.x1gmr53x.x1cpjm7i.x1fgarty.x1943h6x.x14qwyeo.xw06pyt.x579bpy.xjkpybl.x1xlr1w8.xzsf02u.x1yc453h')\n",
+    "            ami=driver.find_element(By.CLASS_NAME,'x9f619.x1n2onr6.x1ja2u2z.x78zum5.xdt5ytf.x2lah0s.x193iq5w.x1cy8zhl.xyamay9')\n",
+    "            comptes.append(compte.text)\n",
+    "            amis.append(ami.text)\n",
+    "            liens.append(url)\n",
+    "        except Exception as e:\n",
+    "            continue\n",
+    "    data = {'Comptes': comptes,'Amis':amis,'Liens': liens}\n",
+    "    dt = pd.DataFrame(data)\n",
+    "    dt.to_excel(f'{sujet}.xlsx')\n",
+    "    \n",
+    "    return urls"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fed4735b",
+   "execution_count": null,
+   "id": "c55e21d7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "driver= webdriver.Chrome()\n",
-    "compte='camara.lamine.336'\n",
-    "pwd='24111995'\n",
-    "sujet='ALAYA OUARME'\n",
-    "pages=Takepages(compte,pwd,sujet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "3a52b3d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OUARME BESS ALAYA\n",
-      "ALAYA OUARME\n",
-      "ALIYA ARMO\n",
-      "ALAYA OUARME\n",
-      "ALAYA OUARME\n",
-      "ALY OUARME\n",
-      "ALAYA OUARME\n",
-      "ARMIE YALA\n",
-      "ARMAYA SARI\n",
-      "ARMA ALI\n",
-      "ALAYA OUARME\n",
-      "ALAYE OUARMA\n",
-      "ALI OUARME\n",
-      "ALY OUARME\n",
-      "ALI OUARME\n",
-      "ALI OUARME\n",
-      "MUHAMMAD ARMAYA\n",
-      "ALI OUANRE\n",
-      "ALIYU ARMA\n",
-      "ALIOU OUARME\n",
-      "ALIOU OUARME\n",
-      "ALIOU OUARME\n",
-      "ALY OUARME\n",
-      "ALLAYA ARMA\n",
-      "ARMAYA SALISU\n",
-      "ALLAYE ARMA\n",
-      "ALIA IRMA\n",
-      "OUARME ALI\n",
-      "ALIOU OUARME\n",
-      "ARMA ALAYE\n",
-      "OUARE ALI\n",
-      "ARMAYA DEV\n",
-      "ARMA ALIE\n",
-      "ARMA ALIA\n"
-     ]
-    }
-   ],
-   "source": [
-    "for txt in range(len(pages)):\n",
-    "    try:\n",
-    "        nom=pages[txt].text\n",
-    "        nom=unidecode(nom).upper()\n",
-    "        print(nom)\n",
-    "    except:\n",
-    "        continue\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
