--- a/fb_compte.ipynb
+++ b/fb_compte.ipynb
@@ -2,36 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "id": "4abef97a",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'schedule'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[100], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeys\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Keys\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01munidecode\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m unidecode\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mschedule\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'schedule'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import t\n",
     "from time import sleep\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.common.keys import Keys\n",
-    "from unidecode import unidecode"
+    "from unidecode import unidecode\n",
+    "import schedule"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "id": "294c03a0",
    "metadata": {},
    "outputs": [],
@@ -80,15 +68,40 @@
     "            continue\n",
     "    data = {'Comptes': comptes,'Amis':amis,'Liens': liens}\n",
     "    dt = pd.DataFrame(data)\n",
-    "    dt.to_excel(f'{sujet}.xlsx')\n",
-    "    \n",
-    "    return urls"
+    "    dt.to_excel(f'{sujet}.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "c55e21d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def execute_takepages():\n",
+    "    compte='camara.lamine.336'\n",
+    "    pwd='24111995'\n",
+    "    sujet='ALAYA OUARME'\n",
+    "    Takepages(compte, pwd, sujet)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c55e21d7",
+   "id": "541811a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schedule.every().hour.do(execute_takepages)\n",
+    "while True:\n",
+    "    schedule.run_pending()\n",
+    "    sleep(1200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2208f39",
    "metadata": {},
    "outputs": [],
    "source": []
